force-app/main/default/objects/Event_Service_Provider__mdt/Event_Service_Provider__mdt.object-meta.xml
<CustomObject>
    <description>Provides the mapping from an event type to the corresponding event service provider Apex class.</description>
    <label>Event Service Provider</label>
    <pluralLabel>Event Service Providers</pluralLabel>
</CustomObject>