force-app/main/default/objects/Event_Service_Provider__mdt/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>The type of the notification.</description>
    <label>Event Type</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>