force-app/main/default/objects/Event_Service_Provider__mdt/fields/Process_Mode__c.field-meta.xml
<CustomField>
    <fullName>Process_Mode__c</fullName>
    <description>The mode of the service provider to process to the notification.</description>
    <label>Process Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Realtime</fullName>
                <default>true</default>
                <label>Realtime</label>
            </value>
            <value>
                <fullName>Throttled Realtime</fullName>
            </value>
            <value>
                <fullName>Batch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>