force-app/main/default/objects/Event_Service_Provider__mdt/fields/Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider__c</fullName>
    <description>The Apex class provided to process the type of notification.</description>
    <label>Service Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>